Fix timeline and status checks overflow/alignment (#4086)
- Fixes an issue where links would cause the main timeline to expand indefinitely.
- Fixes an issue where status checks text has extra margin causing a vertical alignment issue

--- a/webviews/editorWebview/index.css
+++ b/webviews/editorWebview/index.css
@@ -69,7 +69,7 @@ textarea:focus,
 .comment-body code,
 .comment-body a,
 span.lineContent {
-	overflow-wrap: break-word;
+	overflow-wrap: anywhere;
 }
 
 #title:empty {
@@ -224,6 +224,10 @@ body .comment-container .review-comment-header {
 
 .status-check-detail-text {
 	margin-right: 8px;
+}
+
+.status-section p {
+	margin: 0;
 }
 
 .form-actions > input[type='submit'] {
